ingress_grafana.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: grafana-ingress
  namespace: monitoring
spec:
  rules:
    - host: grafana-dev-test.{MY-CLUSTER-NAME}
      http:
        paths:
          - backend:
              serviceName: kube-prometheus-grafana
              servicePort: http
            path: /
